--- a/download/download.html
+++ b/download/download.html
@@ -33,7 +33,7 @@
     
       <div class="box2">
         <h1>Faça o download pelo QRcode abaixo</h1>
-        <img src="../Aplicativo-SmartSafe.png" alt="QR code do aplicativo">
+        <img src="../img/Aplicativo-SmartSafe.png" alt="QR code do aplicativo">
       </div>
     </div>
   </section>
