--- a/login/login.html
+++ b/login/login.html
@@ -31,43 +31,64 @@
         <h1>Login</h1>
         <form action="../home/home.html" id="loginForm">
           <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="nomeCompleto">Nome Completo:</label>
+            <input type="text" id="nomeCompleto" name="nomeCompleto" required>
           </div>
           <div class="form-group">
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
           </div>
           <button type="submit" class="Button">Fazer Login</button>
         </form>
       </div>
-      
+
     </div>
   </section>
 
   <div class="redes-sociais">
-    <a href="https://www.facebook.com/PepsiBrasil/?locale=pt_BR" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+    <a href="https://www.facebook.com/PepsiBrasil/?locale=pt_BR" target="_blank"><ion-icon
+        name="logo-instagram"></ion-icon></a>
   </div>
 
-  <script>
-    document.querySelector("#loginForm").addEventListener("submit", function(event) {
-        var email = document.getElementById("email").value;
-        var password = document.getElementById("password").value;
 
-        // Verifica se ambos os campos estão preenchidos
-        if (email.trim() === "" || password.trim() === "") {
-            // Se um dos campos estiver vazio, impede o envio do formulário
-            event.preventDefault();
-            alert("Por favor, preencha todos os campos.");
-        } else {
-            // Simula o login bem-sucedido
-            // Aqui você pode verificar as credenciais com um backend real
-            // Se o login for bem-sucedido, redirecione o usuário para a página desejada
-            window.location.href("/home/home.html");
-            console.log("você")
-        }
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js";
+    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCg1RgV_0Ia931sETYAnde5FYI8XXJ1pbk",
+      authDomain: "smartsafe-web.firebaseapp.com",
+      projectId: "smartsafe-web",
+      storageBucket: "smartsafe-web.appspot.com",
+      messagingSenderId: "548708502622",
+      appId: "1:548708502622:web:1b9ecc0227576e2945b8cf"
+    };
+
+    const app = initializeApp(firebaseConfig);
+
+    const db = getDatabase(app);
+
+    document.getElementById("loginForm").addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const nome = document.getElementById("nomeCompleto").value;
+      const email = document.getElementById("email").value;
+
+
+      set(ref(db, 'usuarios/' + nome), {
+        email: email,
+        nome: nome,
+      })
+        .then(() => {
+          setInterval(function () {
+            window.location.href = "../home/home.html"
+          }, 1000)
+        })
+        .catch((error) => {
+          alert('Erro ao salvar os dados: ' + error.message);
+        });
     });
-</script>
+  </script>
 
 </body>
 
