--- a/login/login.html
+++ b/login/login.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login-Smart Safe</title>
+  <link rel="shortcut icon" href="../logoo.png" type="image/x-icon">
   <link rel="stylesheet" href="login.css">
   <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -46,7 +47,7 @@
   </section>
 
   <div class="redes-sociais">
-    <a href="https://www.facebook.com/PepsiBrasil/?locale=pt_BR" target="_blank"><ion-icon
+    <a href="https://www.instagram.com/smart.safe_?igsh=dWc2bGR6MHFjdDdr" target="_blank"><ion-icon
         name="logo-instagram"></ion-icon></a>
   </div>
 
