--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./page/style.css">
     <title>Smart Safe</title>
 </head>
 
@@ -148,6 +148,6 @@
         </div>
     </footer>
 </body>
-<script src="main.js"></script>
+<script src="./page/main.js"></script>
 
 </html>
