--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <a href="#home">
-            <img src="../public/logo.png" alt="Logo Smart Safe" class="cabecalho-logo">
+            <img src="./public/logo.png" alt="Logo Smart Safe" class="cabecalho-logo">
         </a>
         <div class="cabecalho-menu">
             <a href="#home">Inicio</a>
@@ -113,14 +113,14 @@
                 </div>
             </div>
             <div class="baixar-qrcode">
-                <img src="../public/qrcode.png" alt="qrcode">
+                <img src="./public/qrcode.png" alt="qrcode">
             </div>
         </section>
     </main>
     <footer class="rodape">
         <div class="rodape-info">
             <a href="#home">
-                <img src="../public/logo.png" alt="Logo Smart Safe">
+                <img src="./public/logo.png" alt="Logo Smart Safe">
             </a>
             <div class="info-redes">
                 <h3>Redes sociais:</h3>
