iniciando o trabalho com media query para telas menores

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./page/style.css">
+    <link rel="stylesheet" href="./page/screens.css" media="All">
     <title>Smart Safe</title>
 </head>
 
@@ -26,20 +27,20 @@
             <h2>Bem-vinda ao <br> Smart Safe!</h2>
             <p>A segurança imediata na palma da sua mão</p>
         </section>
-        <section class="sobre" id="sobre">
+        <section class="sobre sections" id="sobre">
             <div class="sobre-titulo">
                 <h1>O que somos?</h1>
-                <span class="linha-laranja-sobre"></span>
+                <span class="linha-laranja-sobre linha-laranja"></span>
             </div>
             <p>SmartSafe é uma tecnologia com intuito de sanar a violência, o assédio e a perseguição contra a mulher,
                 proporcionando então as nossas mulheres a agilidade ao pedido de ajuda, uma segurança e o apoio.
                 Trazendo algo pensando justamente em tantas dificuldades, sendo assim um suporte que só será encontrado
                 de forma tão fácil com SmartSafe.</p>
         </section>
-        <section class="funcoes" id="funcoes">
+        <section class="funcoes sections" id="funcoes">
             <div class="funcoes-titulo">
                 <h2>Funções</h2>
-                <span class="linha-laranja-funcoes"></span>
+                <span class="linha-laranja-funcoes linha-laranja"></span>
             </div>
             <div class="funcoes-cards">
                 <div class="card">
@@ -88,10 +89,10 @@
                 </div>
             </div>
         </section>
-        <section class="video">
+        <section class="video sections">
             <div class="video-titulo">
                 <h2>Enteda mais</h2>
-                <span class="linha-laranja-video"></span>
+                <span class="linha-laranja-video linha-laranja"></span>
             </div>
             <iframe class="video-yt" src="https://www.youtube.com/embed/-WgYe47EUHM"
                 title="SmartSafe - A segurança  imediata na palma da sua mão!" frameborder="0"
@@ -99,7 +100,7 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        <section class="baixar" id="baixar">
+        <section class="baixar sections" id="baixar">
             <div class="baixar-textos">
                 <h2>Baixe o Aplicativo no seu telefone</h2>
                 <div class="textos-opcoes">
